# TraditionalMongolianOCR

./: .gitignore  LICENSE  README.md  alphabet.json  pyproject.toml
mongocr/: __init__.py  alphabet.py  data.py  losses.py  metrics.py  model.py  segment.py
scripts/: build_alphabet.py  build_column_val.py  eval_column_pipeline.py  eval_confusion.py  eval_crnn.py  extract_eval_shards.py  pack_wds_shards.py  render_mn_synth.py  train_crnn.py  verify_dataloader.py
tests/: test_alphabet.py  test_column_val.py  test_data.py  test_eval_confusion.py  test_metrics.py  test_model.py  test_segment.py
